# pico-infonesPlus

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeListsORG.txt  DOWNLOAD_STATS.md  DefaultSS444.c  DefaultSS555.c  FrensHelpers.cpp  FrensHelpers.h  HISTORY.md  InfoNES_SaveState.h  README.md  RomLister.cpp  RomLister.h  bld.sh  build.sh  buildAll.sh  buildAll_with_pio_usb.sh  build_alternate.sh  build_alternate_2.sh  build_alternate_2_debug.sh  build_alternate_debug.sh  build_alternate_debug2.sh  build_debug.sh  build_feather_dvi.sh  build_feather_dvi_debug.sh  build_ws_rp2040_pizero.sh  build_ws_rp2040_pizero_debug.sh  checksdk.sh  gamepad.cpp  gamepad.h  get_download_stats.py  hid_app.cpp  hid_app.cpp.new  main.cpp  menu.cpp  menu.h  menu_options.h  menu_settings.h  (+30 more)
.github/workflows/: BuildAndRelease.yml  TEST.yml
PCB/: README.md  pico_nesPCB.zip:Zone.Identifier
PCB/v0.2/: README.md  pico_nes_v09_contour.gm1  pico_nes_v09_copperBottom.gbl  pico_nes_v09_copperTop.gtl  pico_nes_v09_drill.txt  pico_nes_v09_maskTop.gts  pico_nes_v09_pasteMaskBottom.gbp  pico_nes_v09_pasteMaskTop.gtp  pico_nes_v09_silkBottom.gbo
PCB/v2.0/: pico_nes_2P_v01_contour.gm1  pico_nes_2P_v01_copperBottom.gbl  pico_nes_2P_v01_copperTop.gtl  pico_nes_2P_v01_drill.txt  pico_nes_2P_v01_maskBottom.gbs  pico_nes_2P_v01_maskTop.gts  pico_nes_2P_v01_pnp.txt  pico_nes_2P_v01_silkBottom.gbo  pico_nes_2P_v01_silkTop.gto
assets/: DefaultSS160_GB.444  DefaultSS160_GB.555  DefaultSS160_NES.444  DefaultSS160_NES.555  DefaultSS160_NES2.444  DefaultSS160_NES2.555  DefaultSS320.444  DefaultSS320_GB.555  DefaultSS444_NES.c  DefaultSS444_NES2.c  DefaultSS555_GB.c  DefaultSS555_NES.c  DefaultSS555_NES2.c  MMC5.html  MesenDB.cpp  MesenDB_To_cpp.py  MesenNesDB.txt  PicoNesCover.444  PicoNesCover.555  PicoNesCover444.c  PicoNesCover555.c  extractPALcrc.py  font_8x8.h  piconesPlusCatalex.uf2  test.md
assets/pcb/: pico_nes_v09_maskBottom.gbs  pico_nes_v09_silkTop.gto
cmake/: generate_embedded_rom.cmake
drivers/sdcard/: sdcard.c
hosttest/: .gitignore  README.md  host_main.cpp  ppm2png.py  stubs.cpp
hosttest/shim/: FrensHelpers.h  ff.h  pico.h  settings.h
hosttest/shim/pico/: time.h
include/: common_dvi_pin_configs.h
infones/: CMakeLists.txt  InfoNES.cpp  InfoNES.h  InfoNES_FDS.cpp  InfoNES_FDS.h  InfoNES_Mapper.cpp  InfoNES_Mapper.h  InfoNES_NSF.cpp  InfoNES_NSF.h  InfoNES_PalRoms.cpp  InfoNES_PalRoms.h  InfoNES_Region.cpp  InfoNES_Region.h  InfoNES_System.h  InfoNES_pAPU.cpp  InfoNES_pAPU.h  InfoNES_pAPU_Vrc7.cpp  K6502.cpp  K6502.h  K6502_rw.h  MesenNesDB.h  emu2413.c
infones/Issue111/: Readme.md
infones/doc/: readme.html
infones/linux/: InfoNES_System_Linux.cpp  Makefile
infones/mapper/: InfoNES_Mapper_001.cpp  InfoNES_Mapper_002.cpp  InfoNES_Mapper_004.cpp  InfoNES_Mapper_005.cpp  InfoNES_Mapper_005.cpp.old  InfoNES_Mapper_006.cpp  InfoNES_Mapper_007.cpp  InfoNES_Mapper_008.cpp  InfoNES_Mapper_010.cpp  InfoNES_Mapper_011.cpp  InfoNES_Mapper_015.cpp  InfoNES_Mapper_016.cpp  InfoNES_Mapper_018.cpp  InfoNES_Mapper_019.cpp  InfoNES_Mapper_020.cpp  InfoNES_Mapper_021.cpp  InfoNES_Mapper_023.cpp  InfoNES_Mapper_024.cpp  InfoNES_Mapper_026.cpp  InfoNES_Mapper_030.cpp  InfoNES_Mapper_042.cpp  InfoNES_Mapper_044.cpp  InfoNES_Mapper_046.cpp  InfoNES_Mapper_050.cpp  InfoNES_Mapper_051.cpp  InfoNES_Mapper_060.cpp  InfoNES_Mapper_061.cpp  InfoNES_Mapper_062.cpp  InfoNES_Mapper_064.cpp  InfoNES_Mapper_067.cpp  InfoNES_Mapper_068.cpp  InfoNES_Mapper_069.cpp  InfoNES_Mapper_070.cpp  InfoNES_Mapper_071.cpp  InfoNES_Mapper_072.cpp  InfoNES_Mapper_073.cpp  InfoNES_Mapper_075.cpp  InfoNES_Mapper_076.cpp  InfoNES_Mapper_077.cpp  InfoNES_Mapper_078.cpp  (+34 more)
infones/ppc2002/: InfoNES2002.vcw  resource.h
infones/ppc2003/: InfoNES2003.vcp  InfoNES2003.vcw  InfoNES_System_ppc2003.cpp
infones/win32/: InfoNES.dsp  InfoNES.dsw  InfoNES_Resource_Win.rc  InfoNES_Sound_Win.h  resource.h
src/: CMakeLists.txt  FrensHelpers.cpp  RomLister.cpp  hid_app.cpp  main.cpp  menu.cpp  menu.h  tusb_config.h  tusb_hid.cpp  tusb_xfer.cpp  wiipad.h
src/drivers/fatfs/: ffconf.h
src/drivers/gamepads/: CMakeLists.txt  bluepad.cpp  dualshock4.cpp  dualshock5.cpp  gamepads.cpp  gamepads.h  joystick.cpp  keyboard.cpp  nespad.cpp  nintendo.cpp  psclassic.cpp  wiipad.cpp
src/include/: font_8x8.h
src/infones/: CMakeLists.txt  InfoNES_Mapper.cpp  InfoNES_Mapper.h  InfoNES_Types.h  InfoNES_pAPU.cpp  InfoNES_pAPU.h  K6502_rw.h
src/infones/doc/: GPL2J
src/infones/mapper/: InfoNES_Mapper_000.cpp  InfoNES_Mapper_001.cpp  InfoNES_Mapper_003.cpp  InfoNES_Mapper_009.cpp  InfoNES_Mapper_013.cpp  InfoNES_Mapper_017.cpp  InfoNES_Mapper_019.cpp  InfoNES_Mapper_022.cpp  InfoNES_Mapper_023.cpp  InfoNES_Mapper_024.cpp  InfoNES_Mapper_025.cpp  InfoNES_Mapper_032.cpp  InfoNES_Mapper_033.cpp  InfoNES_Mapper_034.cpp  InfoNES_Mapper_040.cpp  InfoNES_Mapper_041.cpp  InfoNES_Mapper_043.cpp  InfoNES_Mapper_045.cpp  InfoNES_Mapper_047.cpp  InfoNES_Mapper_048.cpp  InfoNES_Mapper_049.cpp  InfoNES_Mapper_057.cpp  InfoNES_Mapper_058.cpp  InfoNES_Mapper_065.cpp  InfoNES_Mapper_066.cpp  InfoNES_Mapper_069.cpp  InfoNES_Mapper_074.cpp  InfoNES_Mapper_080.cpp  InfoNES_Mapper_082.cpp  InfoNES_Mapper_083.cpp  InfoNES_Mapper_087.cpp  InfoNES_Mapper_089.cpp  InfoNES_Mapper_090.cpp  InfoNES_Mapper_091.cpp  InfoNES_Mapper_092.cpp  InfoNES_Mapper_094.cpp  InfoNES_Mapper_095.cpp  InfoNES_Mapper_096.cpp  InfoNES_Mapper_097.cpp  InfoNES_Mapper_100.cpp  (+36 more)
src/infones/ppc2002/: InfoNES2002.rc  InfoNES2002.vcp  InfoNES_System_ppc2002.cpp
src/infones/ppc2003/: InfoNES2003.rc  resource.h
src/infones/win32/: InfoNES_Resource_Win.h  InfoNES_Sound_Win.cpp  InfoNES_System_Win.cpp
tests/CatalexSDCard/: main.cpp  menu.cpp  readme.md
